@@ -71,7 +71,7 @@ settings_xml_server = """<?xml version="1.0" encoding="ISO-8859-1"?>
   <delays autodeal="20" round="0" position="0" showdown="0" autodeal_max="1" finish="0" messages="60" />
 
   <table name="Table1" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1" />
-  <table name="Table2" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1" />
+  <table name="Table2" variant="holdem" betting_structure="2-4-limit" seats="10" player_timeout="60" currency_serial="0" />
   <table name="Table3" variant="holdem" betting_structure="test18pokerclient" seats="10" player_timeout="600" muck_timeout="600" currency_serial="1" forced_dealer_seat="0" />
 
   <listen tcp="19480" />
@@ -363,14 +363,12 @@ class PokerAvatarTestCase(unittest.TestCase):
         for packet in avatar.resetPacketsQueue():
             if packet.type == PACKET_POKER_TABLE:
                 found = True
-                myGame = None
                 for  (kk, vv) in avatar.tables.items():
-                    myGame = vv.game
                     self.assertEquals(vv.game.id, table.game.id)
                     self.assertEquals(vv.game.name, "Table2")
                     self.assertEquals(vv.game.max_players, 10)
                     self.assertEquals(vv.game.variant, 'holdem')
-                    self.assertEquals(vv.game.betting_structure, '100-200-no-limit')
+                    self.assertEquals(vv.game.betting_structure, '2-4-limit')
         self.assertEquals(found, True)
         return (client, packet)
     # ------------------------------------------------------------------------
@@ -386,22 +384,22 @@ class PokerAvatarTestCase(unittest.TestCase):
     def sitTable(self, (client, packet), id):
         avatar = self.service.avatars[id]
         table = self.service.getTable(101)
+        seatNumber = id + 1
         avatar.queuePackets()
         avatar.handlePacketLogic(PacketPokerSeat(serial = client.getSerial(),
-                                                 seat = 1, game_id = 101))
+                                                 seat = seatNumber, game_id = 101))
         found = 0
         for packet in avatar.resetPacketsQueue():
             if packet.type == PACKET_POKER_SEATS:
                 found += 1
                 self.assertEquals(packet.game_id, table.game.id)
-                self.assertEquals(packet.seats, [0, client.getSerial(),
-                                                 0, 0, 0, 0, 0, 0, 0, 0])
+                self.assertEquals(packet.seats[seatNumber], client.getSerial())
             if packet.type == PACKET_POKER_PLAYER_ARRIVE:
                 found += 1 
                 self.assertEquals(packet.game_id, table.game.id)
                 self.assertEquals(packet.name, "user%d" % id)
                 self.assertEquals(packet.serial, client.getSerial())
-                self.assertEquals(packet.seat, 1)
+                self.assertEquals(packet.seat, seatNumber)
             if packet.type == PACKET_POKER_PLAYER_CHIPS:
                 found += 1
                 self.assertEquals(packet.game_id, table.game.id)
@@ -467,10 +465,40 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.sendExplain)
         d.addCallback(self.loginWithPasswordTooLong, 0)
         return d
+    # -------------------------------------------------------------------------
+    def buyInTable(self, (client, packet), id, gameId, myAmount):
+        avatar = self.service.avatars[id]
+        table = self.service.getTable(gameId)
+        seatNumber = id + 1
+        avatar.queuePackets()
+        avatar.handlePacketLogic(PacketPokerBuyIn(serial = client.getSerial(),
+                                               amount = myAmount, game_id = gameId))
+        found = 0
+        for packet in avatar.resetPacketsQueue():
+            if packet.type == PACKET_POKER_PLAYER_CHIPS:
+                found += 1
+                self.assertEquals(packet.game_id, table.game.id)
+                self.assertEquals(packet.serial, client.getSerial())
+                self.assertEquals(packet.bet, 0)
+                self.assertEquals(packet.money, myAmount)
+        self.assertEquals(found, 1)
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test12_buyIntoGame(self):
+        """Tests to be sure once sat down, the user can buy into the game"""
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.sendExplain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0)
+        d.addCallback(self.sitTable, 0)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.quit)
+        return d
 # ------------------------------------------------------
 def Run():
+    os.environ['VERBOSE_T'] = '4'
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test11"
+#    loader.methodPrefix = "test12"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
